modules: extend M0 assessment with A6 (JVM) + A7 (Concurrency)
Добавлены две новые сессии в ассессмент Модуля 0:
- A6: Classloading, bytecode, GC, JIT (рихтеровский слой JVM)
- A7: Race conditions, JMM, DCL, Virtual Threads pinning

Обновлены критерии закрытия M0 (25 → 34 Evidence claims, 6 → 8 записей).
Обновлён heat-map template: новые темы, новый порядок модулей с MJ и MC.

Основание: сессия #2 в Claude Project (2026-04-22), диагностика
контрольных тестов volatile/DispatcherServlet/@Configuration дала
результат 'не знаю/не знаю/плаваю' — слепые зоны подтверждены.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>